--- a/JournalProgram/Properties/Resources.resx
+++ b/JournalProgram/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="notebookStock" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\notebookStock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="notebookStock1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\notebookStock1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
