--- a/JournalProgram/Properties/Resources.resx
+++ b/JournalProgram/Properties/Resources.resx
@@ -133,4 +133,16 @@
   <data name="notebookClosed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\notebookClosed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="notebookClosed_Blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\notebookClosed-Blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="notebookClosed_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\notebookCovers-Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="notebookClosed_Red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\notebookClosed-Red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="notebookClosed_Yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\notebookClosed-Yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
